# cad-agent

./: .env.example  .gitignore  AGENTS.md  CAD-Agent-Kien-Truc-v1_3.md  CLAUDE.md  HANDOFF.md  PHUONG_AN_BO_SUNG_LOP1_TICK_MARK.md  README.md  agent_ir.schema.json  primitive_ir.schema.json  primitive_ir_example.json  pyproject.toml  requirements.txt  semantic_ir.schema.json  verify_full.py  verify_tier2.py
agent_lib/: advisor.py  batch_agent.py  conflict_resolver.py  demo_pipeline.py  io_utils.py  models.py  part_classifier.py  run.py  text_rereader.py
cad_agent/: __init__.py  cli.py  fidelity.py  live.py  manifest.py  pdf.py
demo_output/: agent_report.json  cad_agent_phase5_demo.dxf  semantic_ir_demo_output.json
docs/: ARCHITECTURE.md  PROJECT.md  QUALITY.md  STATUS.md
dxf_builder_lib/: README.md  builder.py  demo_pipeline.py  repair.py  reviewer.py  semantic_components.py
mcp_integration_lib/: __init__.py  demo_pipeline.py  mcp_client.py  repair2.py  reviewer2.py
primitive_ir_lib/: README.md  assemble.py  benchmark_annotate.py  benchmark_evaluator.py  benchmark_image.py  benchmark_overlay.py  benchmark_pdf.py  benchmark_report.py  calibration.py  calibration_registry.py  cross_validation.py  demo_pipeline.py  geometry_extraction.py  io_utils.py  line_merging.py  models.py  requirements.txt  run_image.py  run_pdf.py  table_extraction.py  text_extraction.py  tick_mark_detection.py  validator.py  view_calibration.py  vision_client.py  vision_preflight.py
requirements/: dev.in  runtime.in  solver.in  vision.in
scripts/: bootstrap.ps1  check_environment.py  (+2 more)
(+114 files in other folders)
